discussion/kv_engine/155325/155325_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: Id59d503a56fd211f798fbbfb25344e2b41ecb590

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-09 15:48:44.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 16:15:12.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36643/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.TaskStats_MemAccounting":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.TaskStats_MemAccounting
unknown file: error: SEH exception with code 0xc0000005 thrown in SetUp().
unknown file: error: C++ exception with description "device or resource busy: device or resource busy" thrown in TearDown().
[  FAILED  ] ExecutorPoolEpEngineTest/1.TaskStats_MemAccounting, where TypeParam = class FollyExecutorPool (4 ms)
ExecutorPoolEpEngineTest/1.TaskStats_MemAccounting
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36643/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/217/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11256/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11404/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19260/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 17:39:59.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9681/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36651/ : FAILURE

CMake error: C:/Jenkins/workspace/kv_engine-windows-master/tlm/cmake/Modules/CouchbaseGoogleTestAddTests.cmake:40 (message) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36651/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/217/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11256/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11404/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19260/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
